sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/OrgTreeConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>組織情報DX設定</label>
</CustomObject>