sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/AccountAssociation__c.field-meta.xml
<CustomField>
    <fullName>AccountAssociation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>取引先: 親・子の取引先を階層に含める</label>
    <type>Checkbox</type>
</CustomField>