sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/AccountDateRange__c.field-meta.xml
<CustomField>
    <fullName>AccountDateRange__c</fullName>
    <defaultValue>-1</defaultValue>
    <description>親子関係の取引先レコードに関して有効</description>
    <label>取引先: 対象レコードの期日の範囲(年)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>