sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/AccountDepartmentUsage__c.field-meta.xml
<CustomField>
    <fullName>AccountDepartmentUsage__c</fullName>
    <defaultValue>0</defaultValue>
    <description>部署項目の利用方法。
1: ラベルに追加する
2: 階層にする(未サポート=その他と同処理)
その他: 使用しない</description>
    <label>取引先: 部署名の項目の利用方法</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>