sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/AccountDivisionField__c.field-meta.xml
<CustomField>
    <fullName>AccountDivisionField__c</fullName>
    <defaultValue>&apos;Site&apos;</defaultValue>
    <label>取引先: 部署名の項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>