sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/AccountOrgField__c.field-meta.xml
<CustomField>
    <fullName>AccountOrgField__c</fullName>
    <defaultValue>&apos;Name&apos;</defaultValue>
    <label>取引先: 組織名の項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>