sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/AccountTreeGridColumns__c.field-meta.xml
<CustomField>
    <fullName>AccountTreeGridColumns__c</fullName>
    <defaultValue>&apos;SmartViscaf__NameCard__c, OwnerId&apos;</defaultValue>
    <label>取引先: グリッドに表示する項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>