sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/AccountTreeSource__c.field-meta.xml
<CustomField>
    <fullName>AccountTreeSource__c</fullName>
    <defaultValue>0</defaultValue>
    <label>[不使用] AccountTreeSource</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>