sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/AccountWhere__c.field-meta.xml
<CustomField>
    <fullName>AccountWhere__c</fullName>
    <label>取引先: 対象レコードの追加条件</label>
    <length>255</length>
    <type>Text</type>
</CustomField>