sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/ContactDateRange__c.field-meta.xml
<CustomField>
    <fullName>ContactDateRange__c</fullName>
    <defaultValue>-1</defaultValue>
    <label>取引先責任者: 対象レコードの期日の範囲(年)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>