sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/ContactDivisionField__c.field-meta.xml
<CustomField>
    <fullName>ContactDivisionField__c</fullName>
    <defaultValue>&apos;Department&apos;</defaultValue>
    <label>取引先責任者: 部署名の項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>