sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/ContactEMailField__c.field-meta.xml
<CustomField>
    <fullName>ContactEMailField__c</fullName>
    <defaultValue>&apos;EMail&apos;</defaultValue>
    <label>取引先責任者: メールアドレスの項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>