sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/ContactOnlyLatest__c.field-meta.xml
<CustomField>
    <fullName>ContactOnlyLatest__c</fullName>
    <defaultValue>true</defaultValue>
    <label>取引先責任者: 最新のレコードのみ</label>
    <type>Checkbox</type>
</CustomField>