sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/ContactOtherCondition__c.field-meta.xml
<CustomField>
    <fullName>ContactOtherCondition__c</fullName>
    <defaultValue>0</defaultValue>
    <description>0: なし
1: 名刺への参照があるレコードのみ (省略値)
2: 最新の名刺への参照があるレコードのみ
3: 転職していない最新の名刺への参照があるレコードのみ</description>
    <label>取引先責任者: 対象レコードの条件</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>