sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/ContactTitleField__c.field-meta.xml
<CustomField>
    <fullName>ContactTitleField__c</fullName>
    <defaultValue>&apos;Title&apos;</defaultValue>
    <label>取引先責任者: 役職名の項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>