sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/ContactTreeGridColumns__c.field-meta.xml
<CustomField>
    <fullName>ContactTreeGridColumns__c</fullName>
    <defaultValue>&apos;Title, Phone, MobilePhone, EMail, SmartViscaf__NameCard__c, ContactRole, OwnerId&apos;</defaultValue>
    <label>取引先責任者: グリッドに表示する項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>