sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/ContactWhere__c.field-meta.xml
<CustomField>
    <fullName>ContactWhere__c</fullName>
    <label>取引先責任者: 対象レコードの追加条件</label>
    <length>255</length>
    <type>Text</type>
</CustomField>