sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/DateRageUseFiscalYear__c.field-meta.xml
<CustomField>
    <fullName>DateRageUseFiscalYear__c</fullName>
    <defaultValue>false</defaultValue>
    <label>期日の範囲は会計年度を使う</label>
    <type>Checkbox</type>
</CustomField>