sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/DepartmentFieldsWithTitle__c.field-meta.xml
<CustomField>
    <fullName>DepartmentFieldsWithTitle__c</fullName>
    <defaultValue>&apos;SmartViscaf__division_name__c&apos;</defaultValue>
    <description>カンマ区切りで項目API名を指定します。
これらの項目が部署項目として指定された場合、役職項目の値を削除します。
・テキストエリアで複数行の場合、行を削除します。
・1行の場合、役職のみを削除します。</description>
    <label>部署項目に役職を含む項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>