sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/DepartmentParser__c.field-meta.xml
<CustomField>
    <fullName>DepartmentParser__c</fullName>
    <defaultValue>0</defaultValue>
    <description>部門、部署の分割方法。#AppBuilderでの指定が優先する。
1: 改行で分割
2: 部署値を比較して、超過した文字列を階層にする。
3: 正規表現
4: 部署項目の値を分割しないでそのまま使う
その他:  区切文字（部門、部署の階層の区切り文字正規表現）で区切って階層化する。ただし、英数字のみの語は他に連結する。区切ったノード名で長さ比較する</description>
    <label>部署項目の分割方法</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>