sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/DepartmentParserRegex__c.field-meta.xml
<CustomField>
    <fullName>DepartmentParserRegex__c</fullName>
    <description>部署項目の分割方法# 3: 正規表現 のときに使う正規表現
DepartmentParser__c: 3
省略値は、カスタム表示ラベル SB_Ot_DeptParserRegex</description>
    <label>部署項目を分割する正規表現</label>
    <length>255</length>
    <type>Text</type>
</CustomField>