sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/DepartmentParserSeparater__c.field-meta.xml
<CustomField>
    <fullName>DepartmentParserSeparater__c</fullName>
    <description>部署項目の分割方法# 1: 区切文字 のとき
DepartmentParser__c: 1
正規表現で指定
省略値は、カスタム表示ラベル SB_Ot_DeptParserSeparaterRegex</description>
    <label>部署項目の区切り文字</label>
    <length>255</length>
    <type>Text</type>
</CustomField>