sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/Development__c.field-meta.xml
<CustomField>
    <fullName>Development__c</fullName>
    <defaultValue>false</defaultValue>
    <label>[不使用] Development</label>
    <type>Checkbox</type>
</CustomField>