sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/EnableSelectedRecordMark__c.field-meta.xml
<CustomField>
    <fullName>EnableSelectedRecordMark__c</fullName>
    <defaultValue>true</defaultValue>
    <label>選択中のレコードを識別する</label>
    <type>Checkbox</type>
</CustomField>