sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/EnableYourRecordMark__c.field-meta.xml
<CustomField>
    <fullName>EnableYourRecordMark__c</fullName>
    <defaultValue>true</defaultValue>
    <label>自分のレコードを識別する</label>
    <type>Checkbox</type>
</CustomField>