sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/GridLabelInitialWidth__c.field-meta.xml
<CustomField>
    <fullName>GridLabelInitialWidth__c</fullName>
    <defaultValue>300</defaultValue>
    <label>グリッドのラベル欄の幅の初期値</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>