sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/GridShowContactRoleColumnOnlyWhenData__c.field-meta.xml
<CustomField>
    <fullName>GridShowContactRoleColumnOnlyWhenData__c</fullName>
    <defaultValue>false</defaultValue>
    <label>グリッドの取引先責任者の役割列はデータがあるときだけ表示する</label>
    <type>Checkbox</type>
</CustomField>