sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/GridShowRowNumberColumn__c.field-meta.xml
<CustomField>
    <fullName>GridShowRowNumberColumn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>グリッドの行番号を表示する</label>
    <type>Checkbox</type>
</CustomField>