sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/GridUrlTarget__c.field-meta.xml
<CustomField>
    <fullName>GridUrlTarget__c</fullName>
    <defaultValue>&quot;_self&quot;</defaultValue>
    <label>グリッドのURLデータのtarget</label>
    <length>255</length>
    <type>Text</type>
</CustomField>