sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/LeadDateRange__c.field-meta.xml
<CustomField>
    <fullName>LeadDateRange__c</fullName>
    <defaultValue>0</defaultValue>
    <label>[不使用] リード: 対象レコードの期日の範囲(年)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>