sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/LeadDivisionField__c.field-meta.xml
<CustomField>
    <fullName>LeadDivisionField__c</fullName>
    <label>[不使用] リード: 部署名の項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>