sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/LeadEMailField__c.field-meta.xml
<CustomField>
    <fullName>LeadEMailField__c</fullName>
    <defaultValue>&apos;EMail&apos;</defaultValue>
    <label>[不使用] リード: メールアドレスの項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>