sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/LeadOrgField__c.field-meta.xml
<CustomField>
    <fullName>LeadOrgField__c</fullName>
    <defaultValue>&apos;Company&apos;</defaultValue>
    <label>[不使用] リード: 組織名の項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>