sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/LeadTitleField__c.field-meta.xml
<CustomField>
    <fullName>LeadTitleField__c</fullName>
    <defaultValue>&apos;Title&apos;</defaultValue>
    <label>[不使用] リード: 役職名の項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>