sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/LeadTreeGridColumns__c.field-meta.xml
<CustomField>
    <fullName>LeadTreeGridColumns__c</fullName>
    <defaultValue>&apos;Title, Phone, MobilePhone, EMail, SmartViscaf__NameCard__c, OwnerId&apos;</defaultValue>
    <label>[不使用] リード: グリッドに表示する項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>