sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/LeadWhere__c.field-meta.xml
<CustomField>
    <fullName>LeadWhere__c</fullName>
    <label>[不使用] リード: 対象レコードの追加条件</label>
    <length>255</length>
    <type>Text</type>
</CustomField>