sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/MaxDateRange__c.field-meta.xml
<CustomField>
    <fullName>MaxDateRange__c</fullName>
    <defaultValue>5</defaultValue>
    <label>期日の範囲の最大値</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>