sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/MaxRecords__c.field-meta.xml
<CustomField>
    <fullName>MaxRecords__c</fullName>
    <defaultValue>1000</defaultValue>
    <label>検索するレコード数の上限値</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>