sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/MultiObject__c.field-meta.xml
<CustomField>
    <fullName>MultiObject__c</fullName>
    <defaultValue>&quot;Lead,Account,Contact,SmartViscaf__NameCard__c&quot;</defaultValue>
    <label>[不使用] MultiObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>