sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/MultiObjectActive__c.field-meta.xml
<CustomField>
    <fullName>MultiObjectActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>[不使用] MultiObjectActive</label>
    <type>Checkbox</type>
</CustomField>