sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/MultiObjectConnectionField__c.field-meta.xml
<CustomField>
    <fullName>MultiObjectConnectionField__c</fullName>
    <defaultValue>0</defaultValue>
    <description>他オブジェクトを関連づけるときに用いる項目
0: 会社名 (会社名が一致するレコードを探す）
1: メールアドレス（メールアドレスが一致したレコードと同一の会社名のレコードを探す)
2: 取引先参照項目(または、取引先責任者参照項目）、リード参照項目: 名刺レコード以外では、参照先の名刺レコードの参照項目を使う。参照がない場合は 0: 会社名と同じ処理</description>
    <label>[不使用] MultiObjectConnectionField</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>