sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/MultiObjectTreeGridColumns1__c.field-meta.xml
<CustomField>
    <fullName>MultiObjectTreeGridColumns1__c</fullName>
    <defaultValue>&apos;Title, Phone, MobilePhone, EMail, SmartViscaf__NameCard__c, OwnerId, sobject&apos;</defaultValue>
    <label>[不使用] MultiObjectTreeGridColumns1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>