sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/MultiObjectTreeGridColumns2__c.field-meta.xml
<CustomField>
    <fullName>MultiObjectTreeGridColumns2__c</fullName>
    <label>[不使用] MultiObjectTreeGridColumns2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>