sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/NameCardDateRange__c.field-meta.xml
<CustomField>
    <fullName>NameCardDateRange__c</fullName>
    <defaultValue>-1</defaultValue>
    <label>名刺: 対象レコードの期日の範囲(年)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>