sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/NameCardDivisionField__c.field-meta.xml
<CustomField>
    <fullName>NameCardDivisionField__c</fullName>
    <defaultValue>&apos;SmartViscaf__division__c&apos;</defaultValue>
    <label>名刺: 部署名の項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>