sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/NameCardEMailField__c.field-meta.xml
<CustomField>
    <fullName>NameCardEMailField__c</fullName>
    <defaultValue>&apos;SmartViscaf__email__c&apos;</defaultValue>
    <label>名刺: メールアドレスの項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>