sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/NameCardOrgField__c.field-meta.xml
<CustomField>
    <fullName>NameCardOrgField__c</fullName>
    <defaultValue>&apos;SmartViscaf__company_name__c&apos;</defaultValue>
    <label>名刺: 組織名の項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>