sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/NameCardOtherCondition__c.field-meta.xml
<CustomField>
    <fullName>NameCardOtherCondition__c</fullName>
    <defaultValue>1</defaultValue>
    <description>0: なし
1: 最新の名刺のみ
2: 転職していない最新の名刺のみ</description>
    <label>名刺: 対象レコードの条件</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>