sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/NameCardSObjectName__c.field-meta.xml
<CustomField>
    <fullName>NameCardSObjectName__c</fullName>
    <defaultValue>&apos;SmartViscaf__NameCard__c&apos;</defaultValue>
    <label>名刺: オブジェクト名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>