sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/NameCardTitleField__c.field-meta.xml
<CustomField>
    <fullName>NameCardTitleField__c</fullName>
    <defaultValue>&apos;SmartViscaf__title_name__c&apos;</defaultValue>
    <label>名刺: 役職名の項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>