sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/NameCardTreeGridColumns__c.field-meta.xml
<CustomField>
    <fullName>NameCardTreeGridColumns__c</fullName>
    <defaultValue>&apos;SmartViscaf__title_name__c, SmartViscaf__email__c, SmartViscaf__card_exchange_date__c, SmartViscaf__account__c, SmartViscaf__contact__c, OwnerId&apos;</defaultValue>
    <label>名刺: グリッドに表示する項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>