sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/NameCardWhere__c.field-meta.xml
<CustomField>
    <fullName>NameCardWhere__c</fullName>
    <label>名刺: 対象レコードの追加条件</label>
    <length>255</length>
    <type>Text</type>
</CustomField>