sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/NameOnlyInGrid__c.field-meta.xml
<CustomField>
    <fullName>NameOnlyInGrid__c</fullName>
    <defaultValue>true</defaultValue>
    <label>グリッドでは氏名のみ</label>
    <type>Checkbox</type>
</CustomField>