sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/NameWithEmail__c.field-meta.xml
<CustomField>
    <fullName>NameWithEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>氏名とメールアドレスを表示する</label>
    <type>Checkbox</type>
</CustomField>