sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/NameWithOwner__c.field-meta.xml
<CustomField>
    <fullName>NameWithOwner__c</fullName>
    <defaultValue>true</defaultValue>
    <label>氏名と所有者を表示する</label>
    <type>Checkbox</type>
</CustomField>