sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/NameWithTitle__c.field-meta.xml
<CustomField>
    <fullName>NameWithTitle__c</fullName>
    <defaultValue>true</defaultValue>
    <label>氏名と役職を表示する</label>
    <type>Checkbox</type>
</CustomField>