sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/OwnerAccountWhere__c.field-meta.xml
<CustomField>
    <fullName>OwnerAccountWhere__c</fullName>
    <label>所有者: 取引先の追加の条件</label>
    <length>255</length>
    <type>Text</type>
</CustomField>