sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/OwnerContactOnlyLatest__c.field-meta.xml
<CustomField>
    <fullName>OwnerContactOnlyLatest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>所有者: 取引先責任者は最新のレコードのみ</label>
    <type>Checkbox</type>
</CustomField>