sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/OwnerContactWhere__c.field-meta.xml
<CustomField>
    <fullName>OwnerContactWhere__c</fullName>
    <label>所有者: 取引先責任者の追加の条件</label>
    <length>255</length>
    <type>Text</type>
</CustomField>