sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/OwnerDateRange__c.field-meta.xml
<CustomField>
    <fullName>OwnerDateRange__c</fullName>
    <defaultValue>-1</defaultValue>
    <description>対象の取引先責任者レコードあるいは取引先レコードの最終更新日の範囲</description>
    <label>所有者: 対象レコードの期日の範囲(年)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>