sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/PrioritizeCustomSetting__c.field-meta.xml
<CustomField>
    <fullName>PrioritizeCustomSetting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>カスタム設定を優先する</label>
    <type>Checkbox</type>
</CustomField>