sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/SamePersonUsage__c.field-meta.xml
<CustomField>
    <fullName>SamePersonUsage__c</fullName>
    <defaultValue>0</defaultValue>
    <description>同じ人のレコードがあったときの表示方法
0: そのまま表示する
1: 表示しない
2: 入れ子にする
同じ人の判断は 部署とEMail(NULLなら、Name)</description>
    <label>[不使用] SamePersonUsage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>