sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/TimeoutMargin__c.field-meta.xml
<CustomField>
    <fullName>TimeoutMargin__c</fullName>
    <defaultValue>50</defaultValue>
    <label>タイムアウトまでの時間(ミリ秒)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>