sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/UserDivisionField__c.field-meta.xml
<CustomField>
    <fullName>UserDivisionField__c</fullName>
    <defaultValue>&apos;Department&apos;</defaultValue>
    <label>[不使用] ユーザ: 部署名の項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>