sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/UserEMailField__c.field-meta.xml
<CustomField>
    <fullName>UserEMailField__c</fullName>
    <defaultValue>&apos;EMail&apos;</defaultValue>
    <label>[不使用] ユーザ: メールアドレスの項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>