sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/UserOrgField__c.field-meta.xml
<CustomField>
    <fullName>UserOrgField__c</fullName>
    <defaultValue>&apos;CompanyName&apos;</defaultValue>
    <label>[不使用] ユーザ: 組織名の項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>