sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/UserOtherCondition__c.field-meta.xml
<CustomField>
    <fullName>UserOtherCondition__c</fullName>
    <defaultValue>1</defaultValue>
    <description>0: なし
1: 有効なユーザのみ
2: 同じ組織のユーザのみ
3: 同じ組織の有効なユーザのみ</description>
    <label>[不使用] ユーザ: 対象レコードの条件</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>