sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/UserShowInactiveUsers__c.field-meta.xml
<CustomField>
    <fullName>UserShowInactiveUsers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>[不使用] ユーザ: 無効なユーザを表示する</label>
    <type>Checkbox</type>
</CustomField>