sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/UserShowSameOrgUsers__c.field-meta.xml
<CustomField>
    <fullName>UserShowSameOrgUsers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>[不使用] ユーザ: 同じ組織名のユーザのみ表示する</label>
    <type>Checkbox</type>
</CustomField>