sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/UserTreeGridColumns__c.field-meta.xml
<CustomField>
    <fullName>UserTreeGridColumns__c</fullName>
    <defaultValue>&apos;Title, Phone, MobilePhone, EMail&apos;</defaultValue>
    <label>[不使用] ユーザ: グリッドに表示する項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>