sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/UserWhere__c.field-meta.xml
<CustomField>
    <fullName>UserWhere__c</fullName>
    <label>[不使用] ユーザ: 対象レコードの追加条件</label>
    <length>255</length>
    <type>Text</type>
</CustomField>