sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/VisibleFormatMenu__c.field-meta.xml
<CustomField>
    <fullName>VisibleFormatMenu__c</fullName>
    <defaultValue>true</defaultValue>
    <label>表示形式メニューを表示する</label>
    <type>Checkbox</type>
</CustomField>