sfdx-source/OrgTreeCmp/main/default/objects/OrgTreeConfig__c/fields/VisibleParserMenu__c.field-meta.xml
<CustomField>
    <fullName>VisibleParserMenu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>部署項目の分割方法メニューを表示する</label>
    <type>Checkbox</type>
</CustomField>